--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ cache: cargo
 script:
   - cargo build --verbose --all
   - cargo test --verbose --all
+  - rustup component add rustfmt clippy
   - cargo fmt --all -- --check
   - cargo clippy
