--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ futures = "0.1"
 log = "0.4"
 tokio = { version = "0.1", features = ["async-await-preview"] }
 url = "1.7"
+line_drawing = "0.7"
+pathfinding = "1.1"
 
 [patch.crates-io]
 airmash-protocol = { git = "https://github.com/steamroller-airmash/airmash-protocol-rs" }
